users-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app: users
spec:
  ports:
  - port: 80
    targetPort: 8181
    protocol: TCP
    name: http
  selector:
    app: users
