ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /home
        backend:
          serviceName: home
          servicePort: 80
      - path: /users
        backend:
          serviceName: users
          servicePort: 80
