yelb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yelb-ingress
spec:
  backend:
    serviceName: yelb-ui
    servicePort: 80
