yelb-ingressv2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yelb-ingress
  namespace: yelb
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: yelb-ui
          servicePort: 80
