yelb-ingressv3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yelb-ingress
  namespace: yelb
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: yelb-ui
          servicePort: 80
